Version 3.0, 2020-11-05
    * New features:
        * Add support for Django 3.0 and 3.1. #368
        * Add polygon output for /children and areas_by_type. #324
    * Improvements:
        * Switch to OGR kml/geojson generation. #317
        * Manually prefetch any matching many-many countries. #319
    * Bugfixes:
        * Manually set map icon imagePath so it is shown. #314
        * Remove bytestrings from old migrations. #328
        * Replace use of allow_tags, removed in Django 2. #337
        * Use unary_union instead of cascaded_union. #340
    * Development improvements:
        * Move to GitHub actions. #366
        * Add first-letter support to import script. #352
    * MapIt UK specific:
        * Various scripts for boundary changes and new data in 2018-2020.

Version 2.0, 2017-12-18
    * Breaking changes
        * Add support for Django 2.0, drop support for older than 1.11.
    * New features
        * Add .map.html endpoint to show map of areas. #307
        * Add support for a 'country' filter in query parameters. #55
        * Improve performance of /nearest using <->. #305
    * Bugfixes:
        * Use 6 decimal places on postcode HTML page. #299
        * Remove workaround for inefficient query planning. #302
    * Development improvements:
        * Support more Debian/Ubuntu versions. #301
        * More tests, improved running with changed settings/order.
        * MapIt international-specific code is now in its own repo.
    * MapIt UK specific:
        * 2017 Boundary-Line imports; new Scilly Isles data,
          remove references to old ONS codes. #304
        * Use database for co-ordinate transformation. #299

Version 1.6, 2017-04-07
    * Implement new front end design. #280
    * Add block for extra content in area/postcode info. #284
    * Factor out MapIt global code to its own repository. #291
    * Exclude front-page submit views from any CSRF.
    * Switch maps to HTTPS tiles.
    * Bugfixes: